<resources>
    <string name="app_name">AndroidClub25</string>
    <string name="tejas_gmail_com">tejas@gmail.com</string>
    <string name="signup">Signup</string>
    <string name="add_user">Add User</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_qty">Enter Qty</string>
    <string name="enter_grand_total">Enter Price</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>