<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLoginTitle"
        android:text="@string/login"
        android:textSize="20pt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
         />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtLoginEmail"
        android:layout_below="@+id/tvLoginTitle"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/enter_email"
        android:textStyle="bold"
         android:drawablePadding="5dp"
        android:inputType="textEmailAddress"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtLoginPassword"
        android:layout_below="@+id/edtLoginEmail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/enter_password"
        android:textStyle="bold"
         android:drawablePadding="5dp"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLoginSubmit"
        android:layout_below="@+id/edtLoginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        />
</RelativeLayout>