<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSignupTitle"
        android:text="@string/signup"
        android:textSize="15pt"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSignupFirstName"
        android:layout_below="@+id/tvSignupTitle"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="Enter name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSignupEmail"
        android:layout_below="@+id/edtSignupFirstName"
        android:hint="Enter Email"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSignupPassword"
        android:inputType="textPassword"
        android:layout_below="@+id/edtSignupEmail"
        android:hint="Enter Password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />


      <RadioGroup
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/rgSignupGender"
            android:layout_below="@id/edtSignupPassword"
          android:layout_marginStart="40dp"
          android:orientation="horizontal"
          >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbtnSignupMale"
                android:text="@string/male"
                />
          <RadioButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/rbtnSignupFeMale"
              android:text="@string/female"
              />

      </RadioGroup>


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerSignupCity"
        android:layout_below="@id/rgSignupGender"
        android:layout_marginStart="40dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignupSubmit"
        android:text="@string/signup"
        android:layout_below="@id/spinnerSignupCity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />


</RelativeLayout>